differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr85045.c-5.4.0-1.out.txt
pr85045.c: In function ‘f’:
pr85045.c:8:3: error: called object is not a function or function pointer
   (a / b) ();  
   ^
